<resources>
    <string name="app_name">DriftFlasche</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!--For localization permission-->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Please login in</string>
    <string name="login_tip">Login</string>
    <string name="login_copyright">Copyright served ® standardserve</string>
    <string name="register_title">Register</string>
    <string name="login_keep">Keep for 24 hours</string>
    <string name="register_window">Register Window</string>
    <string name="register_repeat">Please repeat your password</string>
    <string name="register_name">Characters between 2 and 20</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for create bottle dialog -->
    <string name="bottle_type_info">info</string>
    <string name="bottle_type_mood">mood</string>
    <string name="bottle_type_warn">warn</string>
    <string name="confirm">Confirm</string>
    <string name="decline">Decline</string>
    <string name="submission">Submit</string>
    <string name="bottle_creation_dialog_title">Create a bottle</string>
    <string name="bottle_message">Bottle message</string>

    <string name="content"> Please input your content </string>
    <string name="comment"> Please input your comment</string>
    <!-- Strings used for side drawer -->
    <string name="bar_menu1"> Content </string>
    <string name="bar_menu2"> Account </string>

    <string name="profile"> Profile </string>
    <string name="own_bottles"> Bottles </string>
    <string name="settings"> Settings </string>

    <string name="about"> About </string>
    <string name="logout"> Logout </string>

    <string name="delete"> Delete </string>
    <string name="textview">TextView</string>

    <!-- Bottle setting -->
    <string name="setting"> Setting </string>
    <string name="setting_distance"> Choose a range </string>
    <string name="setting_type"> Choose bottle type </string>

    <!-- Bottle information -->
    <string name="bottle_information"> The bottles you drop</string>

    <!-- SnakeBar text -->
    <string name="localization_success"> Localization Successful! </string>

    <!-- Profile -->
    <string name="username"> Username: </string>
    <string name="email"> Email: </string>

    <!-- About -->
    <string name="about_content"> The application is mainly about social communication. Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "as is" basis, without warranties or conditions of any kind, either express or implied. See the License for the specific language governing permissions and limitations under the License. </string>
</resources>