<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_window"
        android:layout_marginLeft="5dp"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/userTruename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/register_name"
        android:layout_marginTop="120dp"/>

    <EditText
        android:id="@+id/registertEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/editTextPassword_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_repeat"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/loginCopyright"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:text="@string/login_copyright" />
</LinearLayout>