<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:paddingStart="1dp"
        android:text="@string/login_title"
        android:textSize="22sp"
        android:textStyle="normal"
        android:layout_marginBottom="160dp"/>

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/loginKeep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/login_keep" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/login_tip"
        android:textColor="#000000"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/register_title"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/loginCopyright"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:text="@string/login_copyright"
        android:gravity="bottom"/>
</LinearLayout>
