<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="30sp"
        android:fontFamily="@font/signikanegative_bold"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_distance"
        android:textSize="20sp"
        android:fontFamily="@font/signikanegative_variablefont_wght"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/range_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/setting_distance"
        android:value="20.0"
        android:valueFrom="0.0"
        android:valueTo="100.0" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_type"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/signikanegative_variablefont_wght"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/bottleType_chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_warn"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottle_type_warn"
                android:layout_marginRight="20dp"
                app:chipIcon="@drawable/warn_icon"
                app:ensureMinTouchTargetSize="true"
                android:checked="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottle_type_mood"
                android:layout_marginRight="20dp"
                app:chipIcon="@drawable/mood_icon"
                app:ensureMinTouchTargetSize="true"
                android:checked="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_info"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottle_type_info"
                app:chipIcon="@drawable/info_icon"
                app:ensureMinTouchTargetSize="true"
                android:checked="true"/>
        </LinearLayout>

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>